--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,24 @@
 *.class
 *.log
+.metals/
+.vscode/
+out
+# Intellij
+.idea/
+target/
+# sbt
+.cache
+.history
+.history3
+.lib/
+dist/*
+target/
+lib_managed/
+src_managed/
+project/boot/
+project/plugins/project/
+project/target/
+project/project/
+logs/
+project/.sbtserver
+.sbtserver/
